# codex-weekly-usage-fitter

./: AGENTS.md  LICENSE  README.md  docs.md  pyproject.toml
docs/: conversation-turn-fix-plan.md  decisions.md  history.md  usage-profiler-plan.md
macos/: CodexUsageWidget.swift  Info.plist
scripts/: build-widget.sh  codex-usage-hook.sh  package-widget-app.sh  run-widget.sh
src/codex_usage/: __init__.py  app_server.py  cli.py  collector.py  coverage_diagnostics.py  paths.py  store.py  transcript.py
tests/: test_app_server.py  test_cli.py  test_coverage_diagnostics.py  test_sample_stop.py  test_store.py  test_transcript.py  test_transcript_backfill.py
