[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-weekly-usage-fitter"
version = "0.1.0"
description = "Local Codex weekly usage sampler and token-to-usage fitter."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Codex User" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
codex-usage = "codex_usage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
